# tic-tac-toe-ai

./: .gitignore  CMakeLists.txt  requirements.txt
docs/: app.js  index.html
include/: ai.h  board.h  game.h  player.h
python/: test.py  ui.py  wrapper.cpp
src/: ai.cpp  board.cpp  game.cpp  main.cpp  player.cpp
web/: style.css
